support hostport filed for kafka
Signed-off-by: Kohei Morita <mrtc0@ssrf.in>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -146,7 +146,7 @@ data:
   AZURE_EVENTHUB_MINIMUMPRIORITY: "{{ .Values.config.azure.eventHub.minimumpriority | b64enc }}"
 
   # Kafka Output
-  KAFKA_URL: "{{ .Values.config.kafka.url | b64enc }}"
+  KAFKA_HOSTPORT: "{{ .Values.config.kafka.hostport | b64enc }}"
   KAFKA_TOPIC: "{{ .Values.config.kafka.topic | b64enc }}"
   KAFKA_PARTITION: "{{ .Values.config.kafka.partition | b64enc }}"
   KAFKA_MINIMUMPRIORITY: "{{ .Values.config.kafka.minimumpriority | b64enc }}"
